--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "warp-reverse-proxy"
 version = "0.1.0"
 authors = ["danielsanchezq <daniel.sanchez@iohk.io>"]
 edition = "2018"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
