--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,12 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-warp = "0.2.4"
 http = "0.2.1"
 hyper = "0.13.7"
+lazy_static = "1.4.0"
 reqwest = "0.10.7"
+unicase = "2.6.0"
+warp = "0.2.4"
 
 [dev-dependencies]
 bytes = "0.5.6"
