--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,13 @@ version = "0.1.0"
 authors = ["danielsanchezq <daniel.sanchez@iohk.io>"]
 edition = "2018"
 license = "MIT"
-
+license-file = "LICENSE"
+homepage = "https://github.com/danielSanchezQ/warp-reverse-proxy"
+repository = "https://github.com/danielSanchezQ/warp-reverse-proxy"
+description = "Warp filter that acts as a reverse proxy, forwarding the request to a proxy address and extracting a response."
+readme = "README.md"
+keywords = ["warp", "proxy", "reverse", "filter"]
+categories = ["web-programming", "web-programming::http-server"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
