--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ http = "0.2.1"
 hyper = "0.13.7"
 lazy_static = "1.4.0"
 reqwest = "0.10.7"
+thiserror = "1.0.20"
 unicase = "2.6.0"
 warp = "0.2.4"
 
