--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ exclude = [
 
 [dependencies]
 hyper = "0.14"
-lazy_static = "1.4.0"
+once_cell = "1.8"
 reqwest = { version = "0.11", default-features = false}
 thiserror = "1.0.23"
 unicase = "2.6.0"
