--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "warp-reverse-proxy"
 version = "0.5.0"
-authors = ["danielsanchezq <daniel.sanchez@iohk.io>"]
+authors = ["danielsanchezq <sanchez.quiros.daniel@gmail.com>"]
 edition = "2018"
 license-file = "LICENSE"
 homepage = "https://github.com/danielSanchezQ/warp-reverse-proxy"
