--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ exclude = [
 [dependencies]
 hyper = "0.14"
 once_cell = "1.10"
-reqwest = { version = "0.11", default-features = false}
+reqwest = { version = "0.11", default-features = false, features = ["stream"] }
 thiserror = "1.0"
 unicase = "2.6"
 warp = "0.3"
