--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ once_cell = "1.16"
 reqwest = { version = "0.11", default-features = false, features = ["stream"] }
 thiserror = "1.0"
 unicase = "2.6"
-warp = "0.3"
+warp = { version = "0.3", default-features = false }
 
 [dev-dependencies]
 bytes = "1.0"
